IntegrationTest Task Fix